# Birlik

./: .gitignore  INSTITUTIONAL_INVESTOR_PRESENTATION.md  README-SECURITY.md  README.md  TECHNICAL_SPECIFICATION_FOR_VIDEO_DEVELOPERS.md  renovate.json  todo.txt  validate_yaml.py
backend/: .env.example  alembic.ini  fly.toml  pyproject.toml
backend/app/: database.py  main.py
backend/app/auth/: jwt.py
backend/app/core/: config.py
backend/app/integrations/birlik_live/: auth.py  client.py  router.py  storage.py  webhooks.py
backend/app/middleware/: security.py  security_headers.py
backend/app/modules/agi_portal/: models.py  router.py  schemas.py
backend/app/modules/ai_gateway/: __init__.py  circuit_breaker.py  guardrails.py  providers.py  router.py  schemas.py
backend/app/modules/auth/: deps.py  router.py  schemas.py  services.py
backend/app/modules/auto_research/: models.py  router.py  schemas.py
backend/app/modules/bis/: router.py
backend/app/modules/cbdc_gateway/: models.py  router.py  schemas.py
backend/app/modules/centers/: models.py  router.py  schemas.py  services.py
backend/app/modules/constitutional_governance/: models.py  router.py  schemas.py
backend/app/modules/dfmi/: models.py  router.py  schemas.py  services.py
backend/app/modules/evidence_vault/: models.py  router.py  schemas.py
backend/app/modules/exchanges/: models.py  router.py  schemas.py  services.py
backend/app/modules/fed/: router.py
backend/app/modules/federated_learning/: models.py  router.py  schemas.py
backend/app/modules/global_monitoring/: models.py  router.py  schemas.py
backend/app/services/: ai_financial_advisor.py  blockchain.py  blockchain_abstraction.py  quantum_blockchain.py
backend/migrations/: env.py
backend/migrations/versions/: 7031464dea0d_add_global_citizen_id_and_other_new_.py
backend/tests/: test_quantum_blockchain.py
(+173 files in other folders)
