[tool.poetry]
name = "digital-bank-api"
version = "2.0.0"
description = "Корпоративная банковская платформа с интеграцией BIS, Федеральной резервной системы и SWIFT"
authors = ["Developer <developer@digitalbank.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
web3 = "^7.11.1"
pydantic-settings = "^2.9.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.41"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
pyjwt = "^2.10.1"
httpx = "^0.28.1"
slowapi = "^0.1.9"
redis = "^6.2.0"
cryptography = "^45.0.5"
prometheus-client = "^0.22.1"
elasticsearch-dsl = "^8.18.0"
structlog = "^25.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
